# launchbox2playnite

./: .gitignore  LICENSE  LaunchBoxYamlImporter.pext  README.md  duplicate_games.yaml  justfile  launchbox2playnite.sln  notes  pyproject.toml
LaunchBoxYamlImporter/: LaunchBoxYamlImporter.cs  LaunchBoxYamlImporter.csproj  extension.yaml
PlayniteProbe/: PlayniteProbe.csproj  Program.cs
YamlProbe/: Program.cs  YamlProbe.csproj
scripts/: find_yaml_duplicates.py
src/launchbox2playnite/: __init__.py  main.py
