[project]
name = "launchbox2playnite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.36.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
